--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h1>
     <br>
     <br>
-    <h3 class="btn btn-info">Start a Game</h3>
+    <h3 class="btn btn-info" onClick="startGame()">Start a Game</h3>
   </div>
 
   <div class="game">
